--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ChooseLangActivity" />
+        <activity android:name=".GenderActivity" />
+        <activity android:name=".DOBActivity"></activity>
     </application>
 
 </manifest>
