--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,14 @@
         </activity>
         <activity android:name=".WelcomeActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".ChooseLangActivity" />
+        <activity android:name=".AppLanguageActivity" />
         <activity android:name=".GenderActivity" />
-        <activity android:name=".DOBActivity"></activity>
+        <activity android:name=".DOBActivity" />
+        <activity android:name=".ContactActivity" />
+        <activity android:name=".LocationActivity" />
+        <activity android:name=".SelectClassroomActivity" />
+        <activity android:name=".SelectSubjectActivity" />
+        <activity android:name=".ClassroomStudentsActivity"></activity>
     </application>
 
 </manifest>
