Classroom Student Activity Layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity android:name=".LocationActivity" />
         <activity android:name=".SelectClassroomActivity" />
         <activity android:name=".SelectSubjectActivity" />
-        <activity android:name=".ClassroomStudentsActivity"></activity>
+        <activity android:name=".ClassroomStudentsActivity" />
+        <activity android:name=".AddStudentActivity" />
     </application>
 
 </manifest>
