--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,11 +20,11 @@
         <activity android:name=".GenderActivity" />
         <activity android:name=".DOBActivity" />
         <activity android:name=".ContactActivity" />
-         <activity android:name=".LocationActivity" />
+        <activity android:name=".LocationActivity" />
         <activity android:name=".SelectClassroomActivity" />
         <activity android:name=".SelectSubjectActivity" />
         <activity android:name=".ClassroomStudentsActivity" />
-        <activity android:name=".SelectSchoolActivity"></activity>
+        <activity android:name=".SelectSchoolActivity"/>
         <activity android:name=".AddStudentActivity" />
     </application>
 
