--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
         <activity android:name=".GenderActivity" />
         <activity android:name=".DOBActivity" />
         <activity android:name=".ContactActivity" />
-         <activity android:name=".LocationActivity" />
+        <activity android:name=".LocationActivity" />
         <activity android:name=".SelectClassroomActivity" />
         <activity android:name=".SelectSubjectActivity" />
         <activity android:name=".ClassroomStudentsActivity" />
-        <activity android:name=".SelectSchoolActivity"></activity>
+        <activity android:name=".SelectSchoolActivity" />
         <activity android:name=".AddStudentActivity" />
     </application>
 
