--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".SelectClassroomActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,11 +22,12 @@
         <activity android:name=".DOBActivity" />
         <activity android:name=".ContactActivity" />
         <activity android:name=".LocationActivity" />
-        <activity android:name=".SelectClassroomActivity" />
+        <!--<activity android:name=".SelectClassroomActivity" />-->
         <activity android:name=".SelectSubjectActivity" />
         <activity android:name=".ClassroomStudentsActivity" />
-        <activity android:name=".SelectSchoolActivity"/>
+        <activity android:name=".SelectSchoolActivity" />
         <activity android:name=".AddStudentActivity" />
+        <activity android:name=".BaseActivity"></activity>
     </application>
 
 </manifest>
