--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.squareup:otto:1.3.8'
     testCompile 'junit:junit:4.12'
 }
 
