--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity android:name=".BaseActivity" />
         <activity android:name=".ClassroomData" />
         <activity android:name=".ClsDataAdaptor" />
-        <activity android:name=".ExplorePath"></activity>
+        <activity android:name=".ExplorePath" />
     </application>
 
 </manifest>
