--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ClassroomData">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,10 +28,8 @@
         <activity android:name=".SelectSchoolActivity" />
         <activity android:name=".AddStudentActivity" />
         <activity android:name=".BaseActivity" />
-        <!--<activity android:name=".ClassroomData" />-->
+        <activity android:name=".ClassroomData" />
         <activity android:name=".ExplorePath" />
-        <!-- <activity android:name=".PathHome"/> -->
-        <!--<activity android:name=".SubjectAnalyticsAdapter"></activity>-->
     </application>
 
 </manifest>
