added journey screen - version 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,9 @@
         <activity android:name=".AddStudentActivity" />
         <activity android:name=".BaseActivity" />
         <activity android:name=".ClassroomData" />
-        <activity android:name=".ClsDataAdaptor" />
-        <activity android:name=".ExplorePath"></activity>
+        <!-- activity android:name=".ClsDataAdaptor" / -->
+        <activity android:name=".ExplorePath" />
+        <activity android:name=".JourneyActivity" />
     </application>
 
 </manifest>
